# ktml-check

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ktml-check  ml-check  ml-check.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml
ml_check/: classifier.py  config.py  kteam_mbox.py  logging.py  message.py  patch_set.py  run.py
snap/: snapcraft.yaml
tests/: base_test.py  test_classifier.py  test_kteam_mbox.py  test_message.py  test_patch_set.py
tests/data/: applied.mbox  no_cover_letter.mbox  not_a_patch.mbox  october.mbox  reply_without_re_prefix.mbox  single_ack.mbox  single_nak.mbox
tools/: version.py
