[project]
name = "ktml-check"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies", "version"]
classifiers=[
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
]
authors = [
    { name = "Cory Todd", email = "cory.todd@canonical.com" }
]

[project.urls]
homepage = "https://github.com/corytodd/ktml-check"
documentation = "https://github.com/corytodd/ktml-check"
repository = "https://github.com/corytodd/ktml-check"
issues = "https://github.com/corytodd/ktml-check/issues"

[project.scripts]
ktml-check = "ml_check.run:main"

[tool.isort]
profile = "black"

[tool.black]
target_version = ["py38"]
exclude = """
(
  /(
    | .git
    | .github
    | venv
  )/
)
"""

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest tests"
source = ["ml_check", "tests"]
data_file = "coverage/.report"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.html]
directory = "coverage"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ml_check.__version__"}
dependencies = {file = "requirements.txt"}
optional-dependencies = {file = "requirements-dev.txt"}
